# PaddleRobotics

./: .gitignore  README.md  README_en.md
HRI/TFVF_HRI/: README.md
HRI/TFVF_HRI/baselines/r2plus1d/: model.py
HRI/TFVF_HRI/interaction/: attention_ctrl.py  expression.py  movement.py  transformer.py  trigger.py
HRI/TFVF_HRI/interaction/common/: data.py  data_via_decord.py
HRI/TFVF_HRI/jetson/: Jetson_INSTALL.md  eval_r2plus1d.cpp  eval_server.proto  eval_v3.cpp  infer_r2plus1d.cpp  infer_v3.cpp  proactive_greeting.proto  run_impl.sh
HRI/TFVF_HRI/perception/common/: backbone.py  ppdet_ops.py
HRI/TFVF_HRI/perception/scene/: x2paddle_yolov4.py  yolo_v3.py  yolo_v4.py
HRI/TFVF_HRI/perception/tracker/: README.md  re_id.py
HRI/TFVF_HRI/perception/utterance/: tokenizer.py  transformer.py
HRI/TFVF_HRI/scripts/: attn_model.sh  baselines.sh  collect_act_emb.py  parallel_train_attn.py  plot_valence_arousal_plain.py  prepare_dataset.py  train_attention_controller.py
HRI/TFVF_HRI/tests/avatar/: test_avatar.py
HRI/TFVF_HRI/tests/perception/: test_common_video.py  test_common_visualize.py  test_scene.py  test_tracker.py
HRI/TFVF_HRI/tools/: keras_to_tensorflow.py
HRI/TFVT_HRI/: README.md  config.py
HRI/TFVT_HRI/anno_platform/: index.html
HRI/TFVT_HRI/anno_platform/js/: FileSaver.js
HRI/TFVT_HRI/avatar/: __init__.py  avatar.py
HRI/TFVT_HRI/baselines/r2plus1d/: dataset.py  program.py  train.py
HRI/TFVT_HRI/data/: utterance_sim_test.txt
HRI/TFVT_HRI/interaction/: action.py  salutation_cls.py
HRI/TFVT_HRI/interaction/common/: discrete_ctrl.py  utils.py
HRI/TFVT_HRI/jetson/: CMakeLists.txt  instance.hpp  multimodal_act.hpp  parallel_eval.py  run.sh
HRI/TFVT_HRI/perception/common/: ppdet_anchor_head.py  ppdet_name_adapter.py  utils.py  video.py  visualize.py
HRI/TFVT_HRI/perception/scene/: __init__.py  eval.py
HRI/TFVT_HRI/perception/tracker/: kalman_filter.py  tracker.py  utils.py
HRI/TFVT_HRI/perception/utterance/: bow.py  ernie_v1.py  eval.py
HRI/TFVT_HRI/scripts/: collect_v2_data.py  download_pretrain_models.sh  run_anno_platform.sh  save_infer_model_params.py
HRI/TFVT_HRI/server/: attn_program.py
HRI/TFVT_HRI/tests/interaction/: test_data.py  test_data_via_decord.py
HRI/TFVT_HRI/tests/perception/: test_utterance.py
HRI/TFVT_HRI/tools/: darknet_to_keras.py  darknet_to_paddle.sh
QuadrupedalRobots/ETGRL/: BCtrain.py  Dynamic_train.py  README.md  __init__.py  env_test.py  gait_action_list_ETG_exp.npy  pretrain.py  train.py
QuadrupedalRobots/ETGRL/A1_robot/: test.py
QuadrupedalRobots/ETGRL/A1_robot/envs/: EnvWrapper.py
QuadrupedalRobots/ETGRL/alg/: BC.py  BCreplay_buffer.py  es.py  sac.py
QuadrupedalRobots/ETGRL/data/: sigma0.5_exp0_dynamic_param9027.npy
QuadrupedalRobots/ETGRL/data/model/: Balance_act0.2_ES1_rpm1_2_itr_830130.npz  Balance_act0.2_ES1_rpm1_2_itr_830130.pt  Cave_ES1_rpm1_0_itr_730125.npz  Cave_ES1_rpm1_0_itr_730125.pt  ESSlopeSlope_2_itr_1670016.npz  ESSlopeSlope_2_itr_1670016.pt  Heightfield_0_itr_900130.npz  Heightfield_0_itr_900130.pt  SlopeStair_rpm1_ES1_1_itr_2620008.npz  SlopeStair_rpm1_ES1_1_itr_2620008.pt  StairSlope_2_itr_680057.npz  StairSlope_2_itr_680057.pt  StairStair_3_itr_960231.npz  StairStair_3_itr_960231.pt  Stairh13_force0_itr_1470080.npz  Stairh13_force0_itr_1470080.pt  cliff_width0.5_half1_itr_3340102.npz  cliff_width0.5_half1_itr_3340102.pt
QuadrupedalRobots/ETGRL/data/origin_CPG/: ESDownStair_origin.npz
QuadrupedalRobots/ETGRL/data/origin_ETG/: Balance_y04_wid06_model_itr160.npz  Cave0.18_model_itr10.npz  ESSlope_origin.npz  Gallop_width0.5_3_model_itr2820.npz
QuadrupedalRobots/ETGRL/deployment/: a1_robot_exercise.py  test.py
QuadrupedalRobots/ETGRL/deployment/envs/: EnvWrapper.py
QuadrupedalRobots/ETGRL/deployment/exp/stairstair/: StairStair3_BC1_itr_500383.pt  gait_action_list_CPG_stairstair7_12_3.npy
QuadrupedalRobots/ETGRL/deployment/robots/: a1.py  a1_robot.py  a1_robot_velocity_estimator.py  laikago_motor.py  laikago_pose_utils.py  minitaur.py
QuadrupedalRobots/ETGRL/deployment/utilities/: Bezier.py  SpotOL.py  moving_window_filter.py
QuadrupedalRobots/ETGRL/env/: MonitorEnv.py
QuadrupedalRobots/ETGRL/model/: Dynamic_parallel_model.py  mujoco_agent.py
QuadrupedalRobots/ETGRL/video/exp0/: events.out.tfevents.1629784378.BDSZYF000146384  itr_10081.pt  itr_46.pt
